# imgutils

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
imgutils/: size.py
tests/: test_size.py
