[project]
name = "imgutils"
version = "0.1"
description = "Image handling utilities."
readme = "README.md"

authors = [{name = "H. Turgut Uyar", email = "uyar@tekir.org"}]
license = {file = "LICENSE.txt"}

requires-python = "~=3.8"
dependencies = ["pillow"]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/uyar/imgutils"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
